# Glaze

./: .gitignore  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Source/ECS/: CMakeLists.txt  main.cpp
Engine/Source/ECS/include/ECS/: CMakeLists.txt  Entity.h  Ids.h  World.h
Engine/Source/ECS/include/ECS/Archetype/: Archetype.h  ArchetypeManager.h  CMakeLists.txt
Engine/Source/ECS/include/ECS/Bundle/: Bundle.h  BundleManager.h  BundleMeta.h  CMakeLists.txt
Engine/Source/ECS/include/ECS/Component/: CMakeLists.txt  Component.h  ComponentManager.h  ComponentMeta.h  ComponentSignature.h
Engine/Source/ECS/include/ECS/Storage/: CMakeLists.txt  Column.h  SparseIndex.h  SparseSet.h  Storage.h  Table.h  TypeErasedArray.h
Engine/Source/ECS/include/ECS/Storage/SparseSet/: CMakeLists.txt  ComponentSparseSet.h  SparseArray.h  SparseSet.h
Engine/Source/ECS/include/ECS/Storage/Table/: CMakeLists.txt  Table.h  TableManager.h
Engine/Source/ECS/include/ECS/Table/: Table.h  TableManager.h
Engine/Source/ECS/src/: World.cpp
Engine/Source/ECS/tests/: CMakeLists.txt  test_Bundle.cpp  test_ComponentManager.cpp  test_SparseArray.cpp  test_SparseSet.cpp  test_TypeErasedArray.cpp
Engine/Source/Utils/: CMakeLists.txt
Engine/Source/Utils/Utils/: HashCombine.h  Layout.h  Optional.h  Panic.h  StrongId.h  SwapRemove.h  TypeInfo.h  TypeOps.h
Sandbox/: CMakeLists.txt
